Importing old theme crashes Blender on "Load X.X Settings" #113002

Closed
opened 2023-09-28 10:56:36 +02:00 by Dalai Felinto · 3 comments

Blender Version
Broken: 2.90 - 4.1
Worked: 2.83

Short description of error
Crash when Loading previous Blender settings.

Exact steps for others to reproduce the error

  • Install this theme in your Blender 4.0 (it will then be the active theme): crash_theme.xml
  • Make sure the 4.1 config folder doesn't exists.
  • Open 4.1 and "Load 4.0 Settings"

Crash!

Note that upon reloading of Blender the problem no longer exists. You can reproduce this crash as far back as 2.90 (install the theme on 2.83).

Backtrace:

#0 blender::gpu::GLStateManager::texture_bind (this=0x7fffde749c08, tex_=0x0, sampler_state=..., unit=0) at source/blender/gpu/opengl/gl_state.cc:457
#1 GPU_texture_bind_ex (tex_=0x0, state=..., unit=0) at source/blender/gpu/intern/gpu_texture.cc:570
#2  icon_draw_cache_texture_flush_ex (texture=0x0, texture_draw_calls=0x13c48d84 <g_icon_draw_cache+772>) at source/blender/editors/interface/interface_icons.cc:1636
#3 icon_draw_cache_flush_ex (only_full_caches=false) at source/blender/editors/interface/interface_icons.cc:1671
#4 UI_icon_draw_cache_end () at source/blender/editors/interface/interface_icons.cc:1689
#5 UI_block_draw (C=0x7fffeb45a388, block=0x7fffac3b8d18) at source/blender/editors/interface/interface.cc:2163
#6 UI_panels_draw (C=0x7fffeb45a388, region=0x7fffaccc6f48) at source/blender/editors/interface/interface_panel.cc:1000
#7 ED_region_panels_draw (C=0x7fffeb45a388, region=0x7fffaccc6f48) at source/blender/editors/screen/area.cc:3277
#8 buttons_navigation_bar_region_draw (C=0x7fffeb45a388, region=0x7fffaccc6f48) at source/blender/editors/space_buttons/space_buttons.cc:612
#9 ED_region_do_draw (C=0x7fffeb45a388, region=0x7fffaccc6f48) at source/blender/editors/screen/area.cc:532
#10 wm_draw_window_offscreen (C=0x7fffeb45a388, win=0x7fffadd93108, stereo=false) at source/blender/windowmanager/intern/wm_draw.cc:1000
#11 wm_draw_window (C=0x7fffeb45a388, win=0x7fffadd93108) at source/blender/windowmanager/intern/wm_draw.cc:1166
#12 wm_draw_update (C=0x7fffeb45a388) at source/blender/windowmanager/intern/wm_draw.cc:1564
#13 WM_main (C=0x7fffeb45a388) at source/blender/windowmanager/intern/wm.cc:615
#14 main (argc=1, argv=0x7fffffffde98) at source/creator/creator.cc:590
**Blender Version** Broken: 2.90 - 4.1 Worked: 2.83 **Short description of error** Crash when Loading previous Blender settings. **Exact steps for others to reproduce the error** * Install this theme in your Blender 4.0 (it will then be the active theme): [crash_theme.xml](/attachments/fa221936-158d-47ff-8560-ebb25838d622) * Make sure the 4.1 config folder doesn't exists. * Open 4.1 and "Load 4.0 Settings" Crash! Note that upon reloading of Blender the problem no longer exists. You can reproduce this crash as far back as 2.90 (install the theme on 2.83). **Backtrace**: ``` #0 blender::gpu::GLStateManager::texture_bind (this=0x7fffde749c08, tex_=0x0, sampler_state=..., unit=0) at source/blender/gpu/opengl/gl_state.cc:457 #1 GPU_texture_bind_ex (tex_=0x0, state=..., unit=0) at source/blender/gpu/intern/gpu_texture.cc:570 #2 icon_draw_cache_texture_flush_ex (texture=0x0, texture_draw_calls=0x13c48d84 <g_icon_draw_cache+772>) at source/blender/editors/interface/interface_icons.cc:1636 #3 icon_draw_cache_flush_ex (only_full_caches=false) at source/blender/editors/interface/interface_icons.cc:1671 #4 UI_icon_draw_cache_end () at source/blender/editors/interface/interface_icons.cc:1689 #5 UI_block_draw (C=0x7fffeb45a388, block=0x7fffac3b8d18) at source/blender/editors/interface/interface.cc:2163 #6 UI_panels_draw (C=0x7fffeb45a388, region=0x7fffaccc6f48) at source/blender/editors/interface/interface_panel.cc:1000 #7 ED_region_panels_draw (C=0x7fffeb45a388, region=0x7fffaccc6f48) at source/blender/editors/screen/area.cc:3277 #8 buttons_navigation_bar_region_draw (C=0x7fffeb45a388, region=0x7fffaccc6f48) at source/blender/editors/space_buttons/space_buttons.cc:612 #9 ED_region_do_draw (C=0x7fffeb45a388, region=0x7fffaccc6f48) at source/blender/editors/screen/area.cc:532 #10 wm_draw_window_offscreen (C=0x7fffeb45a388, win=0x7fffadd93108, stereo=false) at source/blender/windowmanager/intern/wm_draw.cc:1000 #11 wm_draw_window (C=0x7fffeb45a388, win=0x7fffadd93108) at source/blender/windowmanager/intern/wm_draw.cc:1166 #12 wm_draw_update (C=0x7fffeb45a388) at source/blender/windowmanager/intern/wm_draw.cc:1564 #13 WM_main (C=0x7fffeb45a388) at source/blender/windowmanager/intern/wm.cc:615 #14 main (argc=1, argv=0x7fffffffde98) at source/creator/creator.cc:590 ```
Dalai Felinto added the
Module
User Interface
Type
Bug
Severity
Normal
Status
Confirmed
labels 2023-09-28 10:56:37 +02:00
Dalai Felinto changed title from Importing old theme crashes Blender on "Load X.XX Settings" to Importing old theme crashes Blender on "Load X.X Settings" 2023-09-28 11:03:05 +02:00
Member

I had this since forever but the settings are correctly loaded upon restart so I never bothered to report it...

I had this since forever but the settings are correctly loaded upon restart so I never bothered to report it...
Author
Owner

I find it troublesome that the first impression some people have after launching a new Blender is a crash. As harmless as it may be.

I find it troublesome that the first impression some people have after launching a new Blender is a crash. As harmless as it may be.
Jeroen Bakker self-assigned this 2023-09-28 14:22:54 +02:00
Jeroen Bakker added this to the 4.0 milestone 2023-09-28 14:23:14 +02:00
Jeroen Bakker added this to the Viewport & EEVEE project 2023-09-28 14:23:21 +02:00
Member

The imported theme requires border icons (tui.icon_border_intensity > 0.0), but only the non-border icons have been initialized.
Perhaps just missing a call to UI_icons_reload_internal_texture after importing the settings.

| The UI_icons_reload_internal_texture is called from RNA, but importing settings uses DNA?

The imported theme requires border icons (`tui.icon_border_intensity > 0.0`), but only the non-border icons have been initialized. Perhaps just missing a call to `UI_icons_reload_internal_texture` after importing the settings. | The `UI_icons_reload_internal_texture` is called from RNA, but importing settings uses DNA?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-28 20:44:29 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113002
No description provided.